--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Viev</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <h1>Hello World</h1>
     <script src="script.js"></script> 
 </body>
 </html>
